# gltf_dependency_load_error

./: .gitignore  Cargo.toml  README.md
assets/: metalness_black_metal_1-roughness_black_metal_1.ktx2
assets/gltf/: base_color.ktx2  cauldron.gltf
assets/items/: cauldron.item.ron
assets/textures/: normal.ktx2
src/: assets.rs  main.rs
