[package]
name = "gltf_dependency_load_error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "main", features = ["zstd", "ktx2", "basis-universal"] }
serde = { version = "1.0.152", features = ["derive"] }
ron = "0.8.1"
thiserror = "1.0.49"

[profile.dev]
debug = false
